# so101_ROS2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README_DIRECT_FOLLOWER_READONLY.md  RVIZ_REAL_ARM_SYNC.md
.github/workflows/: ci.yml
docs/: getting_started.rst  requirements.txt  setup.rst
docs/_build/: .buildinfo  build.html  genindex.html  getting_started.html  imitation_learning.html  index.html  ros2controlarch.html  search.html  searchindex.js  setup.html
docs/_build/.doctrees/: environment.pickle  imitation_learning.doctree  index.doctree
docs/_build/_sources/: build.rst.txt  imitation_learning.rst.txt  index.rst.txt  ros2controlarch.rst.txt
so101_bringup/: package.xml
so101_bringup/launch/: so101_moveit_trajectory_check.launch.py  so101_readonly_test.launch.py  so101_single_joint_test.launch.py  so101_trajectory_action_server.launch.py
so101_direct_driver/: CMakeLists.txt  package.xml
so101_direct_driver/src/: direct_follower_readonly_node.cpp  follow_joint_trajectory_server_node.cpp  moveit_trajectory_check_node.cpp  single_joint_write_test_node.cpp
so101_moveit_config/: CMakeLists.txt  package.xml
so101_moveit_config/config/: joint_limits.yaml  kinematics.yaml  kinematics_kdl.yaml  moveit_controllers.yaml  ompl_planning.yaml  so101.srdf
so101_moveit_config/launch/: moveit_planning.launch.py
so101_moveit_config/rviz/: moveit.rviz
so101_ros2/: CMakeLists.txt  package.xml
so101_ros2_bridge/: package.xml  setup.py
so101_ros2_bridge/config/: so101_direct_follower_readonly.yaml
so101_ros2_bridge/so101_ros2_bridge/: direct_follower_readonly_node.py
so101_teleop/: CMakeLists.txt  package.xml
so101_vision/: CMakeLists.txt  package.xml
so101_vision/config/: wrist_usb_camera.yaml
so101_vision/launch/: so101_wrist_camera.launch.py
so101_vision/src/: wrist_camera_tf_node.cpp
