<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_vision</name>
  <version>0.1.0</version>
  <description>Vision and wrist camera utilities for SO101 visual grasping.</description>
  <maintainer email="syq@example.com">syq</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>usb_cam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
